// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`public event manifest owns the complete public event surface 1`] = `
[
  "catalog.updated",
  "command.executed",
  "file.edited",
  "file.watcher.updated",
  "global.disposed",
  "installation.update-available",
  "installation.updated",
  "integration.connection.updated",
  "integration.updated",
  "lsp.updated",
  "mcp.browser.open.failed",
  "mcp.tools.changed",
  "message.part.delta",
  "message.part.removed",
  "message.part.updated",
  "message.removed",
  "message.updated",
  "models-dev.refreshed",
  "permission.asked",
  "permission.replied",
  "permission.v2.asked",
  "permission.v2.replied",
  "plugin.added",
  "project.directories.updated",
  "project.updated",
  "pty.created",
  "pty.deleted",
  "pty.exited",
  "pty.updated",
  "question.asked",
  "question.rejected",
  "question.replied",
  "question.v2.asked",
  "question.v2.rejected",
  "question.v2.replied",
  "reference.updated",
  "server.connected",
  "session.compacted",
  "session.created",
  "session.deleted",
  "session.diff",
  "session.error",
  "session.idle",
  "session.next.agent.switched",
  "session.next.compaction.delta",
  "session.next.compaction.ended",
  "session.next.compaction.started",
  "session.next.context.updated",
  "session.next.model.switched",
  "session.next.moved",
  "session.next.prompt.admitted",
  "session.next.prompted",
  "session.next.reasoning.delta",
  "session.next.reasoning.ended",
  "session.next.reasoning.started",
  "session.next.retried",
  "session.next.revert.cleared",
  "session.next.revert.committed",
  "session.next.revert.staged",
  "session.next.shell.ended",
  "session.next.shell.started",
  "session.next.step.ended",
  "session.next.step.failed",
  "session.next.step.started",
  "session.next.synthetic",
  "session.next.text.delta",
  "session.next.text.ended",
  "session.next.text.started",
  "session.next.tool.called",
  "session.next.tool.failed",
  "session.next.tool.input.delta",
  "session.next.tool.input.ended",
  "session.next.tool.input.started",
  "session.next.tool.progress",
  "session.next.tool.success",
  "session.status",
  "session.updated",
  "todo.updated",
  "tui.command.execute",
  "tui.prompt.append",
  "tui.session.select",
  "tui.toast.show",
  "vcs.branch.updated",
  "workspace.failed",
  "workspace.ready",
  "workspace.status",
  "worktree.failed",
  "worktree.ready",
]
`;

exports[`public event manifest owns the complete public event surface 2`] = `
[
  "catalog.updated",
  "file.edited",
  "file.watcher.updated",
  "integration.connection.updated",
  "integration.updated",
  "message.part.removed",
  "message.part.updated",
  "message.removed",
  "message.updated",
  "models-dev.refreshed",
  "permission.v2.asked",
  "permission.v2.replied",
  "plugin.added",
  "project.directories.updated",
  "pty.created",
  "pty.deleted",
  "pty.exited",
  "pty.updated",
  "question.v2.asked",
  "question.v2.rejected",
  "question.v2.replied",
  "reference.updated",
  "session.created",
  "session.deleted",
  "session.next.agent.switched",
  "session.next.compaction.delta",
  "session.next.compaction.ended",
  "session.next.compaction.started",
  "session.next.context.updated",
  "session.next.model.switched",
  "session.next.moved",
  "session.next.prompt.admitted",
  "session.next.prompted",
  "session.next.reasoning.delta",
  "session.next.reasoning.ended",
  "session.next.reasoning.started",
  "session.next.retried",
  "session.next.revert.cleared",
  "session.next.revert.committed",
  "session.next.revert.staged",
  "session.next.shell.ended",
  "session.next.shell.started",
  "session.next.step.ended",
  "session.next.step.failed",
  "session.next.step.started",
  "session.next.synthetic",
  "session.next.text.delta",
  "session.next.text.ended",
  "session.next.text.started",
  "session.next.tool.called",
  "session.next.tool.failed",
  "session.next.tool.input.delta",
  "session.next.tool.input.ended",
  "session.next.tool.input.started",
  "session.next.tool.progress",
  "session.next.tool.success",
  "session.updated",
  "todo.updated",
]
`;

exports[`public event manifest owns the complete public event surface 3`] = `
[
  "message.part.removed.1",
  "message.part.updated.1",
  "message.removed.1",
  "message.updated.1",
  "session.created.1",
  "session.deleted.1",
  "session.next.agent.switched.1",
  "session.next.compaction.ended.1",
  "session.next.compaction.started.1",
  "session.next.context.updated.1",
  "session.next.model.switched.1",
  "session.next.moved.1",
  "session.next.prompt.admitted.1",
  "session.next.prompted.1",
  "session.next.reasoning.ended.1",
  "session.next.reasoning.started.1",
  "session.next.retried.1",
  "session.next.revert.cleared.1",
  "session.next.revert.committed.1",
  "session.next.revert.staged.1",
  "session.next.shell.ended.1",
  "session.next.shell.started.1",
  "session.next.step.ended.2",
  "session.next.step.failed.2",
  "session.next.step.started.1",
  "session.next.synthetic.1",
  "session.next.text.ended.1",
  "session.next.text.started.1",
  "session.next.tool.called.1",
  "session.next.tool.failed.1",
  "session.next.tool.input.ended.1",
  "session.next.tool.input.started.1",
  "session.next.tool.progress.1",
  "session.next.tool.success.1",
  "session.updated.1",
]
`;
